# vex-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  vex-bridge.sln  vex-standalone-ui.md
.github/workflows/: ci.yml  release-msi.yml  release.yml
crates/vex-bridge/: Cargo.toml
crates/vex-bridge-protocol/: Cargo.toml
crates/vex-bridge-protocol/src/: lib.rs
crates/vex-bridge/assets/viewer/: NOTICE.md
crates/vex-bridge/assets/viewer/web-ifc-three/: IFCLoader.js
crates/vex-bridge/src/: cli.rs  config.rs  daemon_lock.rs  daemon_supervisor.rs  dashboard.rs  desktop.rs  desktop_assets.rs  desktop_bridge.js  desktop_main.rs  device.rs  errors.rs  ifc.rs  keychain.rs  lib.rs  main.rs  pairing.rs  pipeline.rs  server.rs  state.rs  tray.rs  tray_main.rs  vex_cli.rs  watcher.rs
docs/: adding-a-cad.md  autodesk-app-store.md  early-access-distribution.md
install/: install-revit.ps1  install.ps1  install.sh  uninstall.ps1
installer/macos/: build-pkg.sh
installer/macos/resources/: conclusion.html  welcome.html
installer/windows/: VexAtlasSetup.iss  gen-images.ps1  setup.iss
plugins/autocad-csharp/: Application.cs  BridgeClient.cs  BundledBin.cs  Commands.cs  Eula.cs  IsExternalInit.cs  ProjectPickerDialog.cs  README.md  VexBridgeAutoCAD.csproj
plugins/generic-watch-folder/: README.md
plugins/revit-csharp/: Application.cs  BridgeClient.cs  BundledBin.cs  Eula.cs  IsExternalInit.cs  PairCommand.cs  ProjectPickerDialog.cs  PushCommand.cs  README.md  VexBridgeRevit.addin  VexBridgeRevit.csproj
plugins/revit-csharp/installer/: PackageContents.xml  build-bundle.ps1
plugins/revit-csharp/installer/wix/: Product.wxs
plugins/revit-csharp/marketplace/: EarlyAccessInstall.html  LICENSE.txt  LISTING.md  ReadMe.html
plugins/rhino-python/: README.md  vex_bridge.py
