[workspace]
resolver = "2"
members = [
    "crates/vex-bridge",
    "crates/vex-bridge-protocol",
]

[workspace.package]
version      = "0.2.11"
edition      = "2021"
license      = "Apache-2.0"
authors      = ["Architur"]
rust-version = "1.78"

[workspace.dependencies]
# core
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"

# async runtime + http
tokio              = { version = "1", features = ["full"] }
axum               = { version = "0.7", features = ["macros"] }
tower              = "0.5"
tower-http         = { version = "0.5", features = ["cors", "trace"] }
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# crypto + auth
ed25519-dalek      = { version = "2", features = ["rand_core"] }
rand               = "0.8"
sha2               = "0.10"
base64             = "0.22"

# OS integration
keyring            = "2"          # cross-platform secret storage
directories        = "5"          # ~/.config/vex-bridge etc.
# Use platform-native backends: kqueue on macOS, ReadDirectoryChangesW on Windows.
# Default features auto-select the best backend per platform.
notify             = { version = "6" }

# CLI
clap               = { version = "4", features = ["derive"] }

# Cross-platform browser / file opener (macOS: open, Windows: start, Linux: xdg-open)
open               = "5"

[profile.release]
lto              = "thin"
codegen-units    = 1
strip            = true
opt-level        = 3
