[package]
name        = "vex-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local daemon that lets any CAD plugin push to architur over a tiny localhost HTTP API."

[[bin]]
name = "vex-bridge"
path = "src/main.rs"

[lib]
name = "vex_bridge"
path = "src/lib.rs"

[dependencies]
vex-bridge-protocol = { path = "../vex-bridge-protocol" }

anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
reqwest            = { workspace = true }
ed25519-dalek      = { workspace = true }
rand               = { workspace = true }
sha2               = { workspace = true }
base64             = { workspace = true }
keyring            = { workspace = true }
directories        = { workspace = true }
notify             = { workspace = true }
clap               = { workspace = true }
open               = { workspace = true }
